# dipa_test_task

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
dipa/: asgi.py  settings.py  urls.py  wsgi.py
dipa_messages/: admin.py  apps.py  forms.py  models.py  tests.py  views.py
dipa_messages/migrations/: 0001_initial.py
dipa_messages/templates/dipa_messages/: error_page.html  index.html  success_page.html
