[tool.poetry]
name = "dipa"
version = "0.1.0"
description = "Dipa test task for python developer"
authors = ["Vitaly Kalinin <xcrsx@icloud.com>"]

[tool.poetry.dependencies]
python = "~3.9"
Django = "^4.0.2"
psycopg2 = "^2.9.3"
pylint-django = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
